# stock-analysis

./: .gitignore  AGENTS.md  README.md  pyproject.toml  stock_analysis_tool.py
analysis/: __init__.py  calculate_capm_daily_returns.py  calculate_sp500_betas.py
connectors/: __init__.py  sp500_constituents_daily_connector.py  sp500_daily_connector.py
